Add missing bounds for onshore-wind criteria

--- a/validate_data/nearterm_capacity_expansion.yaml
+++ b/validate_data/nearterm_capacity_expansion.yaml
@@ -37,6 +37,9 @@
   region: World
   year: 2030
   validation:
+    - warning_level: high
+      upper_bound: 3655.0  # GW
+      lower_bound: 1220.0  # GW
     - warning_level: medium
       upper_bound: 2853.0  # GW
       lower_bound: 1719.0  # GW
