Refactor the indicator name

--- a/validate_data/sustainable_bioenergy.yaml
+++ b/validate_data/sustainable_bioenergy.yaml
@@ -1,5 +1,5 @@
 # Set sustainable bioenergy use as upper bound
-- name: Reason For Concern|Sustainable Bioenergy Use|World
+- name: Sustainability Concern|Sustainable Bioenergy Use|World
   variable: Primary Energy|Biomass
   region: World
   validation:
