--- a/validate_data/plausible_nearterm_capacity.yaml
+++ b/validate_data/plausible_nearterm_capacity.yaml
@@ -1,5 +1,5 @@
-# Set sustainable bioenergy use as upper bound
-- name: Plausibility Vetting|Hydropower Capacity|World|2030
+# Set bounds for plausible/feasible near-term power-generation capacity
+- name: Feasibility Concern|Hydropower Capacity|World|2030
   variable: Capacity|Electricity|Hydro
   region: World
   year: 2030
@@ -10,7 +10,7 @@
     - warning_level: medium
       upper_bound: 1606.66  # GW
       lower_bound: 1175.37  # GW
-- name: Plausibility Vetting|Nuclear Capacity|World|2030
+- name: Feasibility Concern|Nuclear Capacity|World|2030
   variable: Capacity|Electricity|Nuclear
   region: World
   year: 2030
@@ -21,7 +21,17 @@
     - warning_level: medium
       upper_bound: 441.92  # GW
       lower_bound: 320.33  # GW
-- name: Plausibility Vetting|Onshore Wind Capacity|World|2025
+- name: Feasibility Concern|Wind Capacity|World|2025
+  variable: Capacity|Electricity|Wind
+  region: World
+  year: 2025
+  validation:
+    - warning_level: high
+      lower_bound: 945.0  # GW
+    - warning_level: medium
+      lower_bound: 1138.0  # GW
+    # assuming that total wind capacity must be greater to the lower bound for onshore wind capacity
+- name: Feasibility Concern|Onshore Wind Capacity|World|2025
   variable: Capacity|Electricity|Wind|Onshore
   region: World
   year: 2025
@@ -32,7 +42,16 @@
     - warning_level: medium
       upper_bound: 1570.0  # GW
       lower_bound: 1138.0  # GW
-- name: Plausibility Vetting|Onshore Wind Capacity|World|2030
+- name: Feasibility Concern|Wind Capacity|World|2030
+  variable: Capacity|Electricity|Wind
+  region: World
+  year: 2030
+  validation:
+    - warning_level: high
+      lower_bound: 1220.0  # GW
+    - warning_level: medium
+      lower_bound: 1719.0  # GW
+- name: Feasibility Concern|Onshore Wind Capacity|World|2030
   variable: Capacity|Electricity|Wind|Onshore
   region: World
   year: 2030
@@ -43,7 +62,7 @@
     - warning_level: medium
       upper_bound: 2853.0  # GW
       lower_bound: 1719.0  # GW
-- name: Plausibility Vetting|Solar PV Capacity|World|2025
+- name: Feasibility Concern|Solar PV Capacity|World|2025
   variable: Capacity|Electricity|Solar
   region: World
   year: 2025
@@ -54,7 +73,7 @@
     - warning_level: medium
       upper_bound: 3152.0  # GW
       lower_bound: 2083.0  # GW
-- name: Plausibility Vetting|Solar PV Capacity|World|2030
+- name: Feasibility Concern|Solar PV Capacity|World|2030
   variable: Capacity|Electricity|Solar
   region: World
   year: 2030
